# flexus

./: .clang-format  .clang-format-ignore  .gitignore  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  Configuration.cmake  DOCUMENTATION  Makefile  README.md  TODO_BEFORE_MERGE  build.sh  cmake_helpers.cmake  conanfile.py  config_env.sh  config_env.sh~  flake.nix  makefile.all  makefile.checksetup  makefile.component  makefile.component_all_ccs  makefile.component_gcc  makefile.component_icc  makefile.components  makefile.core  makefile.defs  makefile.install  makefile.pristine  makefile.simulator  makefile.simulator_all_ccs  makefile.simulator_gcc  makefile.simulator_icc  makefile.simulators  makefile.variant  release  script.sh  simprint.h  testing_harness[1]_include.cmake  testing_harness[1]_tests.cmake  topology.cpp  (+1 more)
.github/scripts/: build_frozen_pkgs.sh
.github/workflows/: 00-build.yaml  build-actions.yml  build_and_run_unit.yml  format.yml
Old_makefiles/: makefile.defs
component_test/: .gitignore  CMakeLists.txt  Configuration.cmake  README  components.cmake  main.cpp  test.cpp
component_test/wiring/: components.cmake
components/BPWarm/: BPStat.hpp  BPWarm.hpp  BPWarmImpl.cpp
components/BookShim/: BooksimStats.hpp  Makefile.BookShim  MemoryNetwork.hpp  MemoryNetworkImpl.cpp  NetShim.hpp  NetShimImpl.cpp  channel.cpp  channel.hpp  netcommon.cpp  netcommon.hpp  netcontainer.cpp  netcontainer.hpp  netnode.cpp  netnode.hpp  netswitch.cpp  netswitch.hpp
components/BranchPredictor/: BTB.cpp  BTB.hpp  BTBEntry.hpp  BTBSet.cpp  BTBSet.hpp  BranchPredictor.cpp  BranchPredictor.hpp  TAGEImpl.hpp
components/CMOB/: CMOB.hpp  CMOBImpl.cpp
components/CMPCache/: AbstractArray.hpp  AbstractCacheController.hpp  AbstractDirectory.hpp  AbstractPolicy.hpp  AbstractRegionDirectory.hpp  CMPCache.hpp  CMPCacheController.cpp  CMPCacheController.hpp  CMPCacheImpl.cpp  CMPCacheInfo.hpp  CacheBuffers.hpp  CacheState.cpp  CacheState.hpp  CacheStats.hpp  EvictBuffer.hpp  InfiniteDirectory.hpp  LimitedDirectoryState.hpp  MissAddressFile.hpp  MissTracker.hpp  NonInclusiveMESIPolicy.cpp  NonInclusiveMESIPolicy.hpp  ProcessEntry.hpp  RTArray.hpp  RTDirectory.hpp  SimpleDirectoryState.hpp  StdArray.hpp  StdDirectory.hpp  TaglessDirectory.hpp
components/CMPCoreNetworkInterface/: CMPCoreNetworkInterface.hpp  CMPCoreNetworkInterfaceImpl.cpp
components/CMPDirectory/: AbstractDirectory.hpp  AbstractPolicy.hpp  AbstractRegionDirectory.hpp  BankedController.cpp  BankedController.hpp  BankedDirectory.hpp  BankedDirectoryImpl.cpp  CMPDirectory.hpp  CMPDirectoryImpl.cpp  DirectoryController.cpp  DirectoryController.hpp  DirectoryInfo.hpp  EvictBuffer.hpp  InclusiveMOESIPolicy.cpp  InclusiveMOESIPolicy.hpp  InfiniteDirectory.hpp  LimitedDirectoryState.hpp  MissAddressFile.hpp  ProcessEntry.hpp  RegionDirectory.hpp  SimpleDirectoryState.hpp  StdDirectory.hpp  TaglessPolicy.cpp  TaglessPolicy.hpp
components/CMPL2NetworkInterface/: CMPL2NetworkInterface.hpp  CMPL2NetworkInterfaceImpl.cpp
components/CMPMCNetworkInterface/: CMPMCNetworkInterface.hpp  CMPMCNetworkInterfaceImpl.cpp
components/CMPNetShim/: CMPNetShim.hpp  CMPNetShimImpl.cpp  channel.cpp  channel.hpp  netcommon.cpp  netcommon.hpp  netcontainer.cpp  netcontainer.hpp  netnode.cpp  netnode.hpp  netswitch.cpp  netswitch.hpp
components/CMPNetworkControl/: CMPNetworkControl.hpp  CMPNetworkControlImpl.cpp
components/Cache/: AbstractArray.hpp  (+20 more)
configs/: L1d-32KB-2way.simics  L1i-32KB-2way.simics  L2-shared-2MB-16way.simics  arm-cortex-a15.simics  arm-cortex-a8.simics  core.simics  memory.simics  network.simics  user-postload.simics
core/: MakeUniqueWrapper.hpp  Makefile  component.hpp  component_interface.hpp  configuration.hpp  configuration_macros.hpp  debug.cfg  doxygen.config  drive.hpp  drive_reference.hpp  exception.hpp  fast_alloc.cpp  fast_alloc.hpp  flexus.cpp  flexus.cpp.orig  flexus.hpp  interface_macros.hpp  makefile.all_ccs  makefile.gcc  makefile.icc  metaprogram.hpp  simulator_layout.hpp  simulator_name.hpp  stats.hpp  target.hpp  transport.hpp  types.cpp  types.hpp
doc/: debug-doc.txt
flexus-test-app/: prepare-test-app  prepare-test-app-v9.simics  prepare-test-app-x86.simics
run/: README.md  custom.dtb  debug.cfg  qemu.cfg  runq  timing.cfg  trace.cfg
scripts/: .run_job.rc.tcl  clang_format_test.sh  cmake_test.sh  collapse_all.sh  flexus_scripts.bash  flexus_scripts.csh  flexus_scripts.sh  flexus_scripts.sourceme  flexus_scripts.tcsh  global.run_job.rc.tcl  lex.py  munge-checkpoint.py  postprocess.sh  postprocess_ckptgen.sh  run_job  run_job.faq  sample_and_ipcs.sh  yacc.py
stat-manager/: CMakeLists.txt  Makefile  stat-collapse.cpp  stat-manager.cpp  stat-sample.cpp  time-breakdown.rpt
tests/: build_flexus.sh  build_harness.sh  clang_format_test.sh  run_harness.sh
tests/harness/: .gitignore  CMakeLists.txt  Configuration.cmake  cmake_helpers.cmake
tests/harness/docs/: DummyExpanded.cpp  MMUExpanded_short.cpp  MemoryLoopbackExpanded.cpp  Usage
tests/harness/harness_base/: all_tests.cpp
tests/harness/src/: all_tests.cpp  wiring.cpp
tests/harness/tests/: DummyQemu.cpp  DummyQemu.h  DummyQemu.hpp  StatStreamParser.h
tests/harness/tests/BPWarmTest/: BPWarmTests.h  BPWarmTrace.txt  test.cpp
tests/harness/tests/DummyTest/: all_tests.cpp  test.cpp  test1.h  test2.h  test3.h
tests/harness/tests/ExampleComponentTest/: all_tests.cpp  extra_deps.cmake  test1.h  test2.h  test3.h  test4.h
tests/harness/tests/FastCacheTest/: FastCacheFixture.hpp  FastCacheTests.h  test.cpp
tests/harness/tests/FetchAddressGenerateTest/: FetchAddressGenerateTests.h  extra_deps.cmake  test.cpp
tests/harness/tests/MMUTest/: MMUTests.h  extra_deps.cmake  test.cpp
tests/harness/tests/MemoryLoopbackTest/: correctMessageTypeTest.h  delayTest.h  maxQueuedRequestsTest.h  maxRequestsTest.h  ninad_MixedRequestResponse.h  ninad_maxReq.h  test.cpp  useFetchReplyTest.h
tests/harness/tests/uArchARMTest/: extra_deps.cmake  test.cpp  uArchARMTests.h
tests/harness/tests/uFetchTest/: extra_deps.cmake  test.cpp  uFetchTests.h
(+1409 files in other folders)
